# gamba-tool

./: .gitignore  Cargo.toml  README.md  cargo.toml
.github/workflows/: binaries.yml  homebrew.yml
src/: main.rs
tests/: cli_output.rs
