[package]
name = "operon-finder"
version = "1.3.0"
edition = "2024"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
log = "0.4.20"
anyhow = "1.0.75"
env_logger = "0.10.0"
chrono = "0.4.31"
noodles = { version = "0.99.0", features = ["gtf", "core", "gff"] }
itertools = "0.8"
ftail = { version = "0.3"}
